fix: Addressing review comments
Signed-off-by: Kristiyan Selveliev <kristiyan.selveliev@limechain.tech>